--- a/src/keepass2android/keepass2android-app.csproj
+++ b/src/keepass2android/keepass2android-app.csproj
@@ -1988,6 +1988,12 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable-xhdpi\ic_entry_totp.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable-mdpi\ic_fab_search.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable-xhdpi\ic_fab_search.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
     Other similar extension points exist, see Microsoft.Common.targets.
