--- a/.gitignore
+++ b/.gitignore
@@ -176,3 +176,4 @@ src/java/Keepass2AndroidPluginSDK2/build/generated/mockable-Google-Inc.-Google-A
 /src/ActionViewFilterTest
 /docs/gdrive-verification
 /src/MegaTest
+*.dtbcache.json
