upgrade to Gradle version 8.6 (plugin version 8.4)

--- a/src/java/KP2ASoftkeyboard_AS/app/build.gradle
+++ b/src/java/KP2ASoftkeyboard_AS/app/build.gradle
@@ -3,10 +3,12 @@ android {
 
     namespace 'keepass2android.softkeyboard'
 
-    compileSdkVersion 33
+
 
     defaultConfig {
-        minSdkVersion 18
+        minSdkVersion 21
+        compileSdk 34
+        targetSdk 34
     }
 
     buildTypes {
