--- a/src/java/android-filechooser-AS/app/build.gradle
+++ b/src/java/android-filechooser-AS/app/build.gradle
@@ -18,6 +18,10 @@ android {
             debuggable false
         }
     }
+
+    buildFeatures {
+        buildConfig true
+    }
     compileOptions {
         targetCompatibility 11
         sourceCompatibility 11
