--- a/src/java/KP2AKdbLibrary/app/build.gradle
+++ b/src/java/KP2AKdbLibrary/app/build.gradle
@@ -4,11 +4,13 @@ android {
 
     namespace 'keepass2android.kp2akeytransform'
 
-    compileSdkVersion 33
+
 
     defaultConfig {
         ndk.abiFilters 'armeabi-v7a','arm64-v8a','x86','x86_64'
-
+        minSdkVersion 21
+        targetSdkVersion 34
+        compileSdk 34
 
     }
 
