--- a/src/Kp2aBusinessLogic/Kp2aBusinessLogic.csproj
+++ b/src/Kp2aBusinessLogic/Kp2aBusinessLogic.csproj
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" InitialTargets="showFlavor">
-<Target Name="showFlavor" AfterTargets="Build">
-        <Message Importance="high" Text="building flavor $(Flavor)"></Message>
-    </Target>
-<Import Project="../build-properties.props"/>
+  <Target Name="showFlavor" AfterTargets="Build">
+    <Message Importance="high" Text="building flavor $(Flavor)">
+    </Message>
+  </Target>
+  <Import Project="../build-properties.props" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -182,10 +183,10 @@
   </ItemGroup>
   <ItemGroup Condition=" '$(Flavor)'!='NoNet' ">
     <PackageReference Include="FluentFTP">
-      <Version>48.0.0</Version>
+      <Version>51.1.0</Version>
     </PackageReference>
     <PackageReference Include="MegaApiClient">
-      <Version>1.10.3</Version>
+      <Version>1.10.4</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Graph">
       <Version>1.21.0</Version>
