--- a/src/java/JavaFileStorage/app/build.gradle
+++ b/src/java/JavaFileStorage/app/build.gradle
@@ -33,15 +33,15 @@ NOTE: If you change dependencies here, don't forget to update the jar files in J
 
 dependencies {
 
-    implementation 'com.squareup.okhttp3:okhttp:4.10.0-RC1'
-    implementation 'io.github.rburgst:okhttp-digest:2.5'
+    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
+    implementation 'io.github.rburgst:okhttp-digest:3.1.0'
 
     implementation 'com.google.http-client:google-http-client-gson:1.20.0'
     implementation('com.google.api-client:google-api-client-android:1.30.5') {
         exclude group: 'com.google.android.google-play-services'
     }
     implementation 'com.google.apis:google-api-services-drive:v2-rev102-1.16.0-rc'
-    implementation 'com.dropbox.core:dropbox-core-sdk:4.0.0'
+    implementation 'com.dropbox.core:dropbox-core-sdk:5.4.6'
     implementation 'com.google.api-client:google-api-client:1.30.5'
     implementation 'com.google.api-client:google-api-client-android:1.30.5'
 
