--- a/src/PluginSdkBindingSdkStyle/PluginSdkBindingSdkStyle.csproj
+++ b/src/PluginSdkBindingSdkStyle/PluginSdkBindingSdkStyle.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net8.0-android</TargetFramework>
     <SupportedOSPlatformVersion>21</SupportedOSPlatformVersion>
@@ -6,6 +6,6 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
   <ItemGroup>
-    <AndroidLibrary Include="..\java\Keepass2AndroidPluginSDK2\app\build\outputs\aar\app-release.aar" Link="Jars\app-release.aar" />
+    <AndroidLibrary Include="..\java\Keepass2AndroidPluginSDK2\app\build\outputs\aar\PluginSDK-release.aar" Link="Jars\PluginSDK-release.aar" />
   </ItemGroup>
 </Project>
