--- a/src/Kp2aBusinessLogicSdkStyle/Kp2aBusinessLogicSdkStyle.csproj
+++ b/src/Kp2aBusinessLogicSdkStyle/Kp2aBusinessLogicSdkStyle.csproj
@@ -15,6 +15,7 @@
 	<PackageReference Include="Microsoft.Graph.Auth" Version="1.0.0-preview.7" />
     <PackageReference Include="Microsoft.Identity.Client" Version="4.49.1" />
     <PackageReference Include="Xamarin.AndroidX.Core" Version="1.13.1.5" />
+    <PackageReference Include="Xamarin.Google.Android.Material" Version="1.11.0.3" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AndroidFileChooserBindingSdkStyle\AndroidFileChooserBindingSdkStyle.csproj" />
