reactivate QR scanning capabilities by using GMS CodeScanner (instead of ZXing which is no longer compatible with new .net Android); copy resource string from KP2AKeyboard project to app such that it can be used in the manifest.

--- a/src/keepass2android-appSdkStyle/keepass2android-appSdkStyle.csproj
+++ b/src/keepass2android-appSdkStyle/keepass2android-appSdkStyle.csproj
@@ -740,6 +740,7 @@
     <PackageReference Include="Xamarin.AndroidX.Preference" Version="1.2.1.10" />
     <PackageReference Include="Xamarin.Google.Android.Material" Version="1.11.0.3" />
     <PackageReference Include="Xamarin.GooglePlayServices.Base" Version="118.5.0.2" />
+    <PackageReference Include="Xamarin.GooglePlayServices.Code.Scanner" Version="116.1.0.3" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AndroidFileChooserBindingSdkStyle\AndroidFileChooserBindingSdkStyle.csproj" />
