adjust Makefile to hardlink the appropriate Manifest file from the Manifests folder. Adjust build.yml for renamed test project. Add AndroidManifest.xml to .gitignore as this is only a link.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -330,7 +330,7 @@ jobs:
       run: |
         make msbuild Flavor=NoNet
     - name: Test Autofill
-      working-directory: ./src/Kp2aAutofillParserTest
+      working-directory: ./src/Kp2aAutofillParser.Tests
       run: dotnet test
 
     - name: Build APK (nonet)
