--- a/.gitignore
+++ b/.gitignore
@@ -177,3 +177,4 @@ src/java/Keepass2AndroidPluginSDK2/build/generated/mockable-Google-Inc.-Google-A
 /docs/gdrive-verification
 /src/MegaTest
 *.dtbcache.json
+/src/keepass2android-app/AndroidManifest.xml
