--- a/.github/workflows/release-net.yml
+++ b/.github/workflows/release-net.yml
@@ -24,7 +24,7 @@ jobs:
       env: 
         KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
       run: |
-        echo $KEYSTORE_BASE64 | base64 --decode > kp2a_net.keystore
+        echo $KEYSTORE_BASE64 | base64 --decode > ${{ github.workspace }}/kp2a_net.keystore
 
 
     - name: Setup Gradle
@@ -87,7 +87,7 @@ jobs:
 
     - name: Build APK (net)
       env:
-        KeyStore: kp2a_net.keystore
+        KeyStore: ${{ github.workspace }}/kp2a_net.keystore
         MyAndroidSigningStorePass: ${{ secrets.KEY_STORE_PASSWORD }}
         MyAndroidSigningKeyPass: ${{ secrets.KEY_PASSWORD }}
       run: |
