--- a/.github/workflows/release-net.yml
+++ b/.github/workflows/release-net.yml
@@ -25,7 +25,9 @@ jobs:
         KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
       run: |
         echo $KEYSTORE_BASE64 | base64 --decode > ${{ github.workspace }}/kp2a_net.keystore
-
+        echo $MyAndroidSigningStorePass | sha1sum | cut -c 1-5
+        echo $MyAndroidSigningKeyPass | sha1sum | cut -c 1-5
+        cat $KeyStore |  sha1sum | cut -c 1-5
 
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@v3
