fix debugging signing

--- a/.github/workflows/release-net.yml
+++ b/.github/workflows/release-net.yml
@@ -23,6 +23,9 @@ jobs:
     - name: Extract key store
       env: 
         KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
+        KeyStore: ${{ github.workspace }}/kp2a_net.keystore
+        MyAndroidSigningStorePass: ${{ secrets.KEY_STORE_PASSWORD }}
+        MyAndroidSigningKeyPass: ${{ secrets.KEY_PASSWORD }}
       run: |
         echo $KEYSTORE_BASE64 | base64 --decode > ${{ github.workspace }}/kp2a_net.keystore
         echo $MyAndroidSigningStorePass | sha1sum | cut -c 1-5
