--- a/.github/workflows/release-net.yml
+++ b/.github/workflows/release-net.yml
@@ -31,23 +31,12 @@ jobs:
       env: 
         KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
         KeyStore: "${{ github.workspace }}/kp2a_net.keystore"
-        MyAndroidSigningStorePass: ${{ secrets.KEY_STORE_PASSWORD }}
-        MyAndroidSigningKeyPass: ${{ secrets.KEY_PASSWORD }}
-        MyTestEnv: abcd
+        
       shell: bash
       run: |
         echo $KeyStore
-        echo ${{ github.workspace }}/kp2a_net.keystore
         echo $KEYSTORE_BASE64 | base64 --decode > $KeyStore
-        echo "passes: "
-        echo $MyAndroidSigningStorePass | sha1sum | cut -c 1-5
-        echo $MyAndroidSigningKeyPass | sha1sum | cut -c 1-5
-        echo "Test env"
-        echo $MyTestEnv
-        echo $MyTestEnv | sha1sum | cut -c 1-5
-        echo "Key store checksum: "
-        cat $KeyStore |  sha1sum | cut -c 1-5
-        
+
         
 
     - name: Setup Gradle
@@ -110,7 +99,7 @@ jobs:
 
     - name: Build APK (net)
       env:
-        KeyStore: ${{ github.workspace }}/kp2a_net.keystore
+        KeyStore: "${{ github.workspace }}/kp2a_net.keystore"
         MyAndroidSigningStorePass: ${{ secrets.KEY_STORE_PASSWORD }}
         MyAndroidSigningKeyPass: ${{ secrets.KEY_PASSWORD }}
       run: |
