fix file path for apk to upload

--- a/.github/workflows/release-net.yml
+++ b/.github/workflows/release-net.yml
@@ -100,6 +100,7 @@ jobs:
         make Configuration=Release Flavor=Net
 
     - name: List files
+      shell: bash
       run: |
         ls src/keepass2android-app/bin/**/*.*
 
@@ -108,11 +109,11 @@ jobs:
       with:
         name: signed APK ('net' built on ${{ github.job }})
         path: |
-          src/keepass2android-app/bin/Release/*-Signed.apk
+          src/keepass2android-app/bin/Release/net8.0-android/*-Signed.apk
     
     - name: Upload APK to GitHub Release
       uses: softprops/action-gh-release@v2
       if: github.ref_type == 'tag'
       with:
         files: |
-            src/keepass2android-app/bin/Release/*-Signed.apk
+            src/keepass2android-app/bin/Release/net8.0-android/*-Signed.apk
