--- a/src/java/JavaFileStorageTest-AS/app/src/main/AndroidManifest.xml
+++ b/src/java/JavaFileStorageTest-AS/app/src/main/AndroidManifest.xml
@@ -6,8 +6,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:supportsRtl="true">
         <activity android:name="com.crocoapps.javafilestoragetest2.MainActivity"
                   android:exported="true">
             <intent-filter>
