allow using Dropbox secrets from environment (better suited for Github action builds)

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -88,6 +88,11 @@ jobs:
         KeyStore: "${{ github.workspace }}/kp2a.keystore"
         MyAndroidSigningStorePass: ${{ secrets.KEY_STORE_PASSWORD }}
         MyAndroidSigningKeyPass: ${{ secrets.KEY_PASSWORD }}
+        DropboxAppKey: ${{ secrets.DROPBOX_APP_KEY }}
+        DropboxAppSecret: ${{ secrets.DROPBOX_APP_SECRET }}
+        DropboxAppFolderAppKey: ${{ secrets.DROPBOX_APP_FOLDER_APP_KEY }}
+        DropboxAppFolderAppSecret: ${{ secrets.DROPBOX_APP_FOLDER_APP_SECRET }}
+
       run: |
         make Configuration=Release Flavor=Net
 
