--- a/.gitignore
+++ b/.gitignore
@@ -64,7 +64,7 @@ Thumbs.db
 /src/java/android-filechooser/code/projectzip/project.zip
 /src/java/android-filechooser/code/unused.txt
 
-/src/Kp2aBusinessLogic/Io/DropboxFileStorageKeys.cs
+/src/Kp2aBusinessLogic/Io/DropboxFileStorage.g.cs
 
 /src/java/workspace/DriveTest
 
