run workload update before any dotnet/nuget calls in github actions

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -79,6 +79,10 @@ jobs:
       run: |
         make java
 
+    - name: Update dotnet workloads
+      run: |
+        dotnet workload update        
+
     - name: Install NuGet dependencies
       run: make nuget Flavor=${{ matrix.flavor }}
 
